Add CentOS7 support to rsyslog client
This change adds a new variable and task file for supporting
CentOS7 based deployments.

Change-Id: I9d50c557ff6359c8db3c065edc68130de0aefdc9
Signed-off-by: Kevin Carter <kevin.carter@rackspace.com>

--- a/tasks/rsyslog_client_install.yml
+++ b/tasks/rsyslog_client_install.yml
@@ -13,8 +13,14 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-- include: install-apt.yml
+- include: rsyslog_client_install-apt.yml
   when:
     - ansible_pkg_mgr == 'apt'
   tags:
     - install-apt
+
+- include: rsyslog_client_install-yum.yml
+  when:
+    - ansible_pkg_mgr == 'yum'
+  tags:
+    - install-yum
