--- a/tasks/rsyslog_client_install-apt.yml
+++ b/tasks/rsyslog_client_install-apt.yml
@@ -17,7 +17,7 @@
   apt_repository:
     repo: "{{ item.repo }}"
     state: "{{ item.state }}"
-  with_items: "{{ rsyslog_client_apt_repos }}"
+  with_items: "{{ rsyslog_client_repos }}"
   register: add_repos
   until: add_repos|success
   retries: 5
@@ -52,6 +52,6 @@
   until: install_packages|success
   retries: 5
   delay: 2
-  with_items: "{{ rsyslog_client_apt_packages }}"
+  with_items: "{{ rsyslog_client_packages }}"
   tags:
     - rsyslog-client-apt-packages
