--- a/vars/debian.yml
+++ b/vars/debian.yml
@@ -16,12 +16,12 @@
 ## APT Cache Options
 cache_timeout: 600
 
-rsyslog_client_apt_repos: []
+rsyslog_client_repos: []
 
 # Example override to specify which repo the packages should come from
-# rsyslog_client_apt_repos:
+# rsyslog_client_repos:
 #   - { repo: "ppa:adiscon/v8-stable", state: "present" }
 
-rsyslog_client_apt_packages:
+rsyslog_client_packages:
   - rsyslog
   - logrotate
