--- a/vars/redhat-7.yml
+++ b/vars/redhat-7.yml
@@ -13,23 +13,8 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-galaxy_info:
-  author: rcbops
-  description: Rsyslog log client setup
-  company: Rackspace
-  license: Apache2
-  min_ansible_version: 1.6.6
-  platforms:
-    - name: Ubuntu
-      versions:
-        - trusty
-        - xenial
-    - name: EL
-      versions:
-        - 7
-  categories:
-    - client
-    - rsyslog
-    - development
-    - openstack
-dependencies: []
+rsyslog_client_repos: []
+
+rsyslog_client_packages:
+  - rsyslog
+  - logrotate
