Allow overriding of default logrotate options
Two variables have been added, rsyslog_client_log_rotate_options
and rsyslog_client_log_rotate_scripts, to allow deployers to override
and set logrotate config options as they wish.

The os_aggregate_storage.j2 template has also been renamed to
logrotate.j2 to better fit its purpose.

Change-Id: If7538fd2409f3583f22209868f538e01796813c2

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -42,6 +42,19 @@ rsyslog_client_tcp_port: 514
 rsyslog_client_log_files: []
 
 rsyslog_client_log_rotate_file: os_aggregate_storage
+rsyslog_client_log_rotate_options:
+  - copytruncate
+  - weekly
+  - missingok
+  - rotate 14
+  - compress
+  - dateext
+  - maxage 60
+  - notifempty
+  - nocreate
+rsyslog_client_log_rotate_scripts:
+  - name: postrotate
+    content: "restart rsyslog 2>&1 || true"
 
 # Set the `rsyslog_client_user_defined_targets` to define specific log targets.
 # This option will allow you to define multiple log targets with different templates
