Add ability to change apt/yum package state
The current method of installing the distribution packages required is
set in the tasks and cannot be changed by a deployer.

Currently the apt task always installs the latest package. This results
in unexpected binary changes when a deployer may simply be trying to
execute a configuration change.

This patch adds the ability for a deployer to change the desired state
so that the results are predictable.

Change-Id: Ie75b2eb144a622373ff204b4a9d79a8791ea4790

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -13,6 +13,10 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+# Set the package install state for distribution packages
+# Options are 'present' and 'latest'
+rsyslog_client_package_state: "latest"
+
 rsyslog_client_spool_directory: /var/spool/rsyslog
 
 # Set the `rsyslog_client_log_dir` variable in to override log file
