--- a/tasks/rsyslog_client_install-yum.yml
+++ b/tasks/rsyslog_client_install-yum.yml
@@ -36,7 +36,7 @@
 - name: Install rsyslog packages
   yum:
     pkg: "{{ item }}"
-    state: latest
+    state: "{{ rsyslog_client_package_state }}"
   register: install_packages
   until: install_packages|success
   retries: 5
