Prevent syslog leakage
To prevent leakage to syslog this commit adds local7 to the list
of excluded facilities in the rsyslog client default configuration
file. This was done because local7 is used as a facility for
openstack services to send log messages and by not excluding it
in the default config file it was sending the log messages to
syslog and the correct log file for the services.

Change-Id: Ia938c1266dac51e6f278cadc8272ac98bb270044
Partial-Bug: 1588051
(cherry picked from commit eea5c79e96a222abf161d0cfa70b19589495e241)

--- a/files/50-default.conf
+++ b/files/50-default.conf
@@ -1,5 +1,5 @@
 auth,authpriv.*  /var/log/auth.log
-*.*;auth,authpriv.none  -/var/log/syslog
+*.*;local7,auth,authpriv.none  -/var/log/syslog
 cron.*  /var/log/cron.log
 daemon.*  -/var/log/daemon.log
 kern.*  -/var/log/kern.log
