Remove rsyslog_client_repos var and fix apt cache updating
The ability to implement a custom apt/yum repository for rsyslog_client
has been removed as it is unused. Deployers may opt to do this in
a number of other methods (including customising the base container
cache) which do not require us to maintain this code.

Having this ability there resulted in the apt cache updating every time
the role executed even though there was no repo being added.

The cache_timeout variable is moved to the role defaults to allow it
to be overridden more easily and to be exposed in the role docs.

Change-Id: I113c9803495f2a935b99f272c387a4304a149cbf

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -13,6 +13,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+## APT Cache Options
+cache_timeout: 600
+
 # Set the package install state for distribution packages
 # Options are 'present' and 'latest'
 rsyslog_client_package_state: "latest"
