--- a/tasks/rsyslog_client_install-apt.yml
+++ b/tasks/rsyslog_client_install-apt.yml
@@ -13,16 +13,6 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-- name: Rsyslog apt repository
-  apt_repository:
-    repo: "{{ item.repo }}"
-    state: "{{ item.state }}"
-  with_items: "{{ rsyslog_client_repos }}"
-  register: add_repos
-  until: add_repos|success
-  retries: 5
-  delay: 2
-
 #TODO(evrardjp): Replace the next 2 tasks by a standard apt with cache
 #when https://github.com/ansible/ansible-modules-core/pull/1517 is merged
 #in 1.9.x or we move to 2.0 (if tested working)
@@ -34,9 +24,7 @@
 - name: Update apt if needed
   apt:
     update_cache: yes
-  when: >
-    "ansible_date_time.epoch|float - apt_cache_stat.stat.mtime > {{cache_timeout}}" or
-    add_repos | changed
+  when: "ansible_date_time.epoch|float - apt_cache_stat.stat.mtime > {{cache_timeout}}"
 
 - name: Install rsyslog packages
   apt:
