Add check to ensure a target log dir exists
This check adds a check to ensure that a target log directory
exists prior to running the "find" comand to index specific log
files.

Change-Id: I371d0bbbd1f9dfa893df054471f17f5cc4b640df
Signed-off-by: Kevin Carter <kevin.carter@rackspace.com>

--- a/tasks/rsyslog_client_post_install.yml
+++ b/tasks/rsyslog_client_post_install.yml
@@ -26,12 +26,23 @@
     owner: "root"
     group: "root"
 
+- name: Check if log dir exists
+  stat:
+    path: "{{ rsyslog_client_log_dir }}"
+  register: log_dir
+
 - name: Find all log files
   shell: |
     find -L '{{ rsyslog_client_log_dir }}' -type f -name '*.log'
   register: log_files
-  when: >
-    rsyslog_client_log_dir is defined
+  changed_when: false
+  when:
+    - rsyslog_client_log_dir is defined
+    - log_dir.stat.isdir
+
+- name: Union the log files
+  set_fact:
+    rsyslog_client_all_log_files: "{{ log_files.stdout_lines | default([]) | union(rsyslog_client_log_files) }}"
 
 - name: Write rsyslog config for found log files
   template:
@@ -39,10 +50,6 @@
     dest: "/etc/rsyslog.conf"
     owner: "root"
     group: "root"
-
-- name: Union the log files
-  set_fact:
-    rsyslog_client_all_log_files: "{{ log_files.stdout_lines | default([]) | union(rsyslog_client_log_files) }}"
 
 - name: Write rsyslog target file
   template:
