Force Ansible to use dynamic includes
Ansible 2.1.1 introduces a regression in the way conditional
includes are handled which results in every task in the
included file being evaluated even if the condition for the
include is not met. This extends the run time significantly
for a deployment.

This patch forces all conditional includes to be dynamic.

Change-Id: Idaf2a72b1744d223d913991fda70af109a51dfa4
Related-Bug: https://github.com/ansible/ansible/issues/17687

--- a/tasks/rsyslog_client_install.yml
+++ b/tasks/rsyslog_client_install.yml
@@ -14,9 +14,9 @@
 # limitations under the License.
 
 - include: rsyslog_client_install-apt.yml
-  when:
-    - ansible_pkg_mgr == 'apt'
+  static: no
+  when: ansible_pkg_mgr == 'apt'
 
 - include: rsyslog_client_install-yum.yml
-  when:
-    - ansible_pkg_mgr == 'yum'
+  static: no
+  when: ansible_pkg_mgr == 'yum'
