Use centralised test scripts
This patch consumes the test scripts implemented by
https://review.openstack.org/375061 to ensure that
the tests and test preparation is consistent and
more maintainable.

Change-Id: Ida6e525e11fc286d37389b78f755915a2dc29043
(cherry picked from commit cb06bb2df7d54cba06b6c48993714095f938727d)

--- a/tests/test.yml
+++ b/tests/test.yml
@@ -17,7 +17,7 @@
   hosts: localhost
   connection: local
   roles:
-    - role: "{{ rolename | basename }}"
+    - role: "rsyslog_client"
       rsyslog_client_log_rotate_file: test_log_rotate
       rsyslog_client_log_dir: "/var/log"
       rsyslog_client_config_name: "99-test-rsyslog-client.conf"
