Fix errors due to repo_service_user_name setting
Changing the paths of nginx logs to not rely on the
 user name of repo service. This is because nginx related
 configurations, playbooks assume nginx in the directory names.

Change-Id: I84f7e029ff0ce5d0c79acbd2e401d93d8fd2963c
Closes-Bug: #1633739

--- a/tasks/rsyslog_client_post_install.yml
+++ b/tasks/rsyslog_client_post_install.yml
@@ -38,7 +38,7 @@
   changed_when: false
   when:
     - rsyslog_client_log_dir is defined
-    - log_dir.stat.isdir
+    - log_dir.stat.isdir is defined and log_dir.stat.isdir
 
 - name: Union the log files
   set_fact:
