Fix linting issues for ansible-lint 3.4.1
Preparing this role for the ansible-lint version bump

Change-Id: I0a192ebd062e09c41ec0acaa43ed8cbb628f91f5

--- a/tasks/rsyslog_client_post_install.yml
+++ b/tasks/rsyslog_client_post_install.yml
@@ -39,6 +39,9 @@
   when:
     - rsyslog_client_log_dir is defined
     - log_dir.stat.isdir is defined and log_dir.stat.isdir
+  tags:
+    # do not trigger ANSIBLE0013 as shell is indeed needed here
+    - skip_ansible_lint
 
 - name: Union the log files
   set_fact:
