Add /bin/false shell to syslog user
if not specified it does default to /bin/bash

Change-Id: I2b79428f1da46a11b4939305eb73862c540ae846

--- a/tasks/rsyslog_client_pre_install.yml
+++ b/tasks/rsyslog_client_pre_install.yml
@@ -23,6 +23,7 @@
     name: "syslog"
     groups: "adm"
     system: yes
+    shell: /bin/false
     state: present
 
 - name: Ensure ownership on working directory is correct
