Fix rsyslog_client_log_dir to be optional
Fix the regression introduced in
I371d0bbbd1f9dfa893df054471f17f5cc4b640df which causes
the role to fail if a log directory is not provided.

Change-Id: Iba17bed79e26e6e7eb2300d413058145ec680d87

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -26,6 +26,7 @@ rsyslog_client_spool_directory: /var/spool/rsyslog
 # discovery process. This will force the logs from a given directory
 # to be shipped using rsyslog.
 # rsyslog_client_log_dir: /var/log/project
+rsyslog_client_log_dir: false
 
 # Set the `rsyslog_client_log_files` variable in list format to skip
 # log discovery all together and ship only log files that are explicitly
