Fix rsyslog_client_log_dir to be optional
Fix the regression introduced in
I371d0bbbd1f9dfa893df054471f17f5cc4b640df which causes
the role to fail if a log directory is not provided.

Change-Id: Iba17bed79e26e6e7eb2300d413058145ec680d87
(cherry picked from commit 16f933ab1290c4b9b50523faeae1c633ae55017a)

--- a/tasks/rsyslog_client_post_install.yml
+++ b/tasks/rsyslog_client_post_install.yml
@@ -29,6 +29,8 @@
 - name: Check if log dir exists
   stat:
     path: "{{ rsyslog_client_log_dir }}"
+  when:
+    - "{{ rsyslog_client_log_dir | bool }}"
   register: log_dir
 
 - name: Find all log files
@@ -37,7 +39,7 @@
   register: log_files
   changed_when: false
   when:
-    - rsyslog_client_log_dir is defined
+    - not log_dir | skipped
     - log_dir.stat.isdir is defined and log_dir.stat.isdir
 
 - name: Union the log files
