Fix log search dir conditional
Fix bug with search dir conditional introduced by
Iba17bed79e26e6e7eb2300d413058145ec680d87.

Change-Id: I291e3582e5cb01f4a9c394bc8e7d8289ca577f90
Closes-Bug: #1648490
(cherry picked from commit f57486e1a907a37d63d77484db53544748854da9)

--- a/tasks/rsyslog_client_post_install.yml
+++ b/tasks/rsyslog_client_post_install.yml
@@ -30,7 +30,7 @@
   stat:
     path: "{{ rsyslog_client_log_dir }}"
   when:
-    - "{{ rsyslog_client_log_dir | bool }}"
+    - "{{ rsyslog_client_log_dir is defined }}"
   register: log_dir
 
 - name: Find all log files
