--- a/tests/test.yml
+++ b/tests/test.yml
@@ -78,8 +78,14 @@
           - "'$ActionQueueFileName test2' in rsyslog_client_content"
           - "'$ActionQueueFileName test-splunk1' in rsyslog_client_content"
           - "'$ActionQueueFileName test-loggly1' in rsyslog_client_content"
+          # check for log files that are explicitly defined in rsyslog_client_log_files
           - "'/var/log/dmesg' in logrotate_client_content"
           - "'/var/log/udev' in logrotate_client_content"
+          # check for a log file that should be discovered via rsyslog_client_log_dir
+          # /var/log/kern.log should exist on Ubuntu
+          # /var/log/yum.log should exist on CentOS
+          - "'/var/log/kern.log' in logrotate_client_content
+             or '/var/log/yum.log' in logrotate_client_content"
           - "'size 1G' in logrotate_client_content"
           - "rsyslog_default_file.stat.exists"
           - "rsyslog_client_file.stat.exists"
