Bring consistency to tags
Some tags were not applied on the highest level and forced duplication.
We apply here our practices to have role_name-(config|install) [1].

[1]: http://docs.openstack.org/developer/openstack-ansible/developer-docs/contribute.html#ansible-style-guide

Change-Id: I210461d9b3a16f644043ce429029d2163a8ae347

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -27,13 +27,10 @@
 
 - include: rsyslog_client_pre_install.yml
   tags:
-    - rsyslog-client-install
+    - rsyslog_client-install
 
 - include: rsyslog_client_install.yml
   tags:
-    - rsyslog-client-install
+    - rsyslog_client-install
 
 - include: rsyslog_client_post_install.yml
-  tags:
-    - rsyslog-client-install
-    - rsyslog-client-config
