Using find module instead of shell command.
This patch also fixes the following nit.

Compute nodes have soft-links for log directories and currently
gets passed by this when clause:

  - log_dir.stat.isdir is defined and log_dir.stat.isdir

Removing this allows the find module to search through all log directories defined.

Change-Id: I69e2beee7a202f94cfcf13dba3d17c16cef252ed
Closes-Bug: #1636017

--- a/tasks/rsyslog_client_post_install.yml
+++ b/tasks/rsyslog_client_post_install.yml
@@ -40,21 +40,22 @@
     - rsyslog_client-install
 
 - name: Find all log files
-  shell: |
-    find -L '{{ rsyslog_client_log_dir }}' -type f -name '*.log'
+  find:
+    paths: "{{ rsyslog_client_log_dir }}"
+    patterns: "*.log"
+    recurse: yes
+    follow: yes
+    file_type: file
   register: log_files
   changed_when: false
   when:
     - not log_dir | skipped
-    - log_dir.stat.isdir is defined and log_dir.stat.isdir
   tags:
-    # do not trigger ANSIBLE0013 as shell is indeed needed here
-    - skip_ansible_lint
     - rsyslog_client-config
 
 - name: Union the log files
   set_fact:
-    rsyslog_client_all_log_files: "{{ log_files.stdout_lines | default([]) | union(rsyslog_client_log_files) }}"
+    rsyslog_client_all_log_files: "{{ log_files.files | map(attribute='path') | list | default([]) | union(rsyslog_client_log_files) }}"
   tags:
     - rsyslog_client-config
 
