--- a/tasks/rsyslog_client_post_install.yml
+++ b/tasks/rsyslog_client_post_install.yml
@@ -56,6 +56,9 @@
 - name: Union the log files
   set_fact:
     rsyslog_client_all_log_files: "{{ log_files.files | map(attribute='path') | list | default([]) | union(rsyslog_client_log_files) }}"
+  when:
+    - log_files is defined
+    - log_files.files is defined
   tags:
     - rsyslog_client-config
 
