--- a/tasks/rsyslog_client_post_install.yml
+++ b/tasks/rsyslog_client_post_install.yml
@@ -57,10 +57,15 @@
   set_fact:
     rsyslog_client_all_log_files: "{{ log_files.files | map(attribute='path') | list | default([]) | union(rsyslog_client_log_files) }}"
   when:
-    - log_files is defined
-    - log_files.files is defined
+    - rsyslog_client_log_dir is defined
   tags:
     - rsyslog_client-config
+
+- name: Set rsyslog_client_all_log_files when log_files does not exist
+  set_fact:
+    rsyslog_client_all_log_files: "{{ rsyslog_client_log_files }}"
+  when:
+    - rsyslog_client_log_dir is not defined
 
 - name: Write rsyslog config for found log files
   template:
