--- a/vars/debian.yml
+++ b/vars/debian.yml
@@ -20,3 +20,5 @@
 rsyslog_client_distro_packages:
   - rsyslog
   - logrotate
+
+rsyslog_client_reload: 'invoke-rc.d rsyslog rotate > /dev/null || true'
