--- a/vars/redhat-7.yml
+++ b/vars/redhat-7.yml
@@ -16,3 +16,5 @@
 rsyslog_client_distro_packages:
   - rsyslog
   - logrotate
+
+rsyslog_client_reload: '/bin/kill -HUP `cat /var/run/syslogd.pid 2> /dev/null` 2> /dev/null || true'
