--- a/tasks/rsyslog_client_post_install.yml
+++ b/tasks/rsyslog_client_post_install.yml
@@ -27,6 +27,7 @@
     dest: "/etc/rsyslog.d/50-default.conf"
     owner: "root"
     group: "root"
+  when: (groups['rsyslog_all'] is not defined) or (inventory_hostname not in groups['rsyslog_all'])
   tags:
     - rsyslog_client-install
 
@@ -64,6 +65,7 @@
     dest: "/etc/rsyslog.conf"
     owner: "root"
     group: "root"
+  when: (groups['rsyslog_all'] is not defined) or (inventory_hostname not in groups['rsyslog_all'])
   tags:
     - rsyslog_client-config
 
