rsyslog client tasks overwriting rsyslog server config
when rsyslog client role is invoked as part of monitoring agent
installation across all hosts its breaking the rsyslog server.
Added conditions not overwrite the rsyslog configs on rsyslog servers.

Change-Id: Iea783d443af96d9996fd25ea9355f2930d82fb20

--- a/tasks/rsyslog_client_post_install.yml
+++ b/tasks/rsyslog_client_post_install.yml
@@ -19,6 +19,7 @@
     dest: "/etc/rsyslog.d/50-default.conf"
     owner: "root"
     group: "root"
+  when: inventory_hostname not in groups['rsyslog_all']
   tags:
     - rsyslog_client-install
   notify:
@@ -67,6 +68,7 @@
     dest: "/etc/rsyslog.conf"
     owner: "root"
     group: "root"
+  when: inventory_hostname not in groups['rsyslog_all']
   tags:
     - rsyslog_client-config
   notify:
