rsyslog client tasks overwriting rsyslog server config
when rsyslog client role is invoked as part of monitoring agent
installation across all hosts its breaking the rsyslog server.
Added conditions not overwrite the rsyslog configs on rsyslog servers.

Combined backport of:
https://review.openstack.org/438205
https://review.openstack.org/438927

Change-Id: Iea783d443af96d9996fd25ea9355f2930d82fb20
(cherry picked from commit 931b04ed00917dfee250ced5fe55ff462b0d9c2b)

--- a/tasks/rsyslog_client_post_install.yml
+++ b/tasks/rsyslog_client_post_install.yml
@@ -27,6 +27,7 @@
     dest: "/etc/rsyslog.d/50-default.conf"
     owner: "root"
     group: "root"
+  when: (groups['rsyslog_all'] is not defined) or (inventory_hostname not in groups['rsyslog_all'])
   tags:
     - rsyslog_client-install
 
@@ -73,6 +74,7 @@
     dest: "/etc/rsyslog.conf"
     owner: "root"
     group: "root"
+  when: (groups['rsyslog_all'] is not defined) or (inventory_hostname not in groups['rsyslog_all'])
   tags:
     - rsyslog_client-config
 
