--- a/tasks/rsyslog_client_post_install.yml
+++ b/tasks/rsyslog_client_post_install.yml
@@ -19,7 +19,7 @@
     dest: "/etc/rsyslog.d/50-default.conf"
     owner: "root"
     group: "root"
-  when: inventory_hostname not in groups['rsyslog_all']
+  when: (groups['rsyslog_all'] is not defined) or (inventory_hostname not in groups['rsyslog_all'])
   tags:
     - rsyslog_client-install
   notify:
@@ -68,7 +68,7 @@
     dest: "/etc/rsyslog.conf"
     owner: "root"
     group: "root"
-  when: inventory_hostname not in groups['rsyslog_all']
+  when: (groups['rsyslog_all'] is not defined) or (inventory_hostname not in groups['rsyslog_all'])
   tags:
     - rsyslog_client-config
   notify:
