Fix remote logging template
Splitted functionality, one template for generating remote syslog
targets and another for streaming the user specifed log files in
syslog format. This avoids duplcate targets when the role is
invoked mutiple times against a host when installing services.

Change-Id: I53e2faf69c0446bea9738a66ee8585e8d795cf52
(cherry picked from commit 705b264df29d7be4bca6f8dae5e9ba86b2757ffa)

--- a/tasks/rsyslog_client_post_install.yml
+++ b/tasks/rsyslog_client_post_install.yml
@@ -65,7 +65,19 @@
   notify:
     - restart rsyslog
 
-- name: Write rsyslog target file
+- name: Write rsyslog config for remote logging
+  template:
+    src: "remote-logging.j2"
+    dest: "/etc/rsyslog.d/51-remote-logging.conf"
+    owner: "root"
+    group: "root"
+  when: (rsyslog_client_all_log_files | length) > 0
+  tags:
+    - rsyslog_client-config
+  notify:
+    - restart rsyslog
+
+- name: Write rsyslog config for converting logs into syslog messages
   template:
     src: "99-rsyslog.conf.j2"
     dest: "/etc/rsyslog.d/{{ rsyslog_client_config_name }}"
