Update postrotate script
Logs stopped streaming after log rotation as rsyslogd rotate is not
working. Updated postrotate script to restart rsyslog instead of
rotate.

Change-Id: Ie74b5bfa9a33553c4e3558e78a634d4d7463f16e

--- a/vars/debian.yml
+++ b/vars/debian.yml
@@ -21,4 +21,4 @@ rsyslog_client_distro_packages:
   - rsyslog
   - logrotate
 
-rsyslog_client_reload: 'invoke-rc.d rsyslog rotate > /dev/null || true'
+rsyslog_client_reload: 'systemctl restart rsyslog > /dev/null 2>&1 || true'
