Add SUSE support
Add support for SUSE based distributions. We also update the bindep.txt,
run_tests.sh and Vagrantfile files from the openstack-ansible-tests
repository.

Change-Id: I9dd0290d9eb7be77446a6bd5c048ceb3371fa536

--- a/tasks/rsyslog_client_pre_install.yml
+++ b/tasks/rsyslog_client_pre_install.yml
@@ -32,3 +32,10 @@
     state: "directory"
     owner: "syslog"
     group: "adm"
+
+- name: Remove conflicting distro packages
+  package:
+    name: "{{ item }}"
+    state: absent
+  with_items:
+    - "{{ rsyslog_client_distro_packages_remove | default([]) }}"
