--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ description-file =
     README.rst
 author = OpenStack
 author-email = openstack-dev@lists.openstack.org
-home-page = http://docs.openstack.org/developer/openstack-ansible-rsyslog_client/
+home-page = https://docs.openstack.org/openstack-ansible-rsyslog_client/latest/
 classifier =
     Intended Audience :: Developers
     Intended Audience :: System Administrators
