--- a/vars/redhat-7.yml
+++ b/vars/redhat-7.yml
@@ -17,4 +17,6 @@ rsyslog_client_distro_packages:
   - rsyslog
   - logrotate
 
-rsyslog_client_reload: '/bin/kill -HUP `cat /var/run/syslogd.pid 2> /dev/null` 2> /dev/null || true'
+rsyslog_client_reload: 'systemctl restart rsyslog 2>&1 || true'
+
+rsyslog_client_already_handled_files: []
