--- a/vars/debian.yml
+++ b/vars/debian.yml
@@ -21,4 +21,8 @@ rsyslog_client_distro_packages:
   - rsyslog
   - logrotate
 
-rsyslog_client_reload: 'invoke-rc.d rsyslog rotate > /dev/null || true'
+rsyslog_client_already_handled_files:
+  - /var/log/kern.log
+  - /var/log/auth.log
+
+rsyslog_client_reload: "{{ 'systemctl restart rsyslog > /dev/null 2>&1 || true' if ansible_distribution_release == 'xenial' else 'invoke-rc.d rsyslog rotate > /dev/null || true' }}"
