Test postrotate works
We should:
- Not check what we do not set (kern.log and auth.log are already
defined in rsyslog file, which we do not template). These two
files would trigger an issue if both are in the same logrotate
configuration.
- Check that the rotation works, by forcing a rotation, and seeing
that the new files are empty.

Change-Id: I08357260e45919d9e71586cac6b9ce413adffc22
Closes-Bug: 1699875
Closes-Bug: 1709291

--- a/tasks/rsyslog_client_post_install.yml
+++ b/tasks/rsyslog_client_post_install.yml
@@ -48,9 +48,12 @@
   tags:
     - rsyslog_client-config
 
+# The log files to handle/rotate are the files you can find
+# in your log folder - the ones already defined for your
+# distribution + the ones you decide to do manually
 - name: Union the log files
   set_fact:
-    rsyslog_client_all_log_files: "{{ log_files.files | map(attribute='path') | list | default([]) | union(rsyslog_client_log_files) }}"
+    rsyslog_client_all_log_files: "{{ log_files.files | map(attribute='path') | list | default([]) | union(rsyslog_client_log_files) | difference(rsyslog_client_already_handled_files) }}"
   when:
     - rsyslog_client_log_dir is defined
   tags:
@@ -58,7 +61,7 @@
 
 - name: Set rsyslog_client_all_log_files when log_files does not exist
   set_fact:
-    rsyslog_client_all_log_files: "{{ rsyslog_client_log_files }}"
+    rsyslog_client_all_log_files: "{{ rsyslog_client_log_files | difference(rsyslog_client_already_handled_files) }}"
   when:
     - rsyslog_client_log_dir is not defined
 
