Cast the log file list as a list
The log file list, when empty, is cast as a string containing "set()",
which produces a broken log config file.

Closes-Bug: #1716138
Change-Id: If429ba3b63252d066db5a410b80ff29e813d96e1

--- a/tasks/rsyslog_client_post_install.yml
+++ b/tasks/rsyslog_client_post_install.yml
@@ -53,7 +53,7 @@
 # distribution + the ones you decide to do manually
 - name: Union the log files
   set_fact:
-    rsyslog_client_all_log_files: "{{ log_files.files | map(attribute='path') | list | default([]) | union(rsyslog_client_log_files) | difference(rsyslog_client_already_handled_files) }}"
+    rsyslog_client_all_log_files: "{{ log_files.files | map(attribute='path') | list | default([]) | union(rsyslog_client_log_files) | difference(rsyslog_client_already_handled_files) | list }}"
   when:
     - rsyslog_client_log_dir is defined
   tags:
@@ -61,7 +61,7 @@
 
 - name: Set rsyslog_client_all_log_files when log_files does not exist
   set_fact:
-    rsyslog_client_all_log_files: "{{ rsyslog_client_log_files | difference(rsyslog_client_already_handled_files) }}"
+    rsyslog_client_all_log_files: "{{ rsyslog_client_log_files | difference(rsyslog_client_already_handled_files) | list }}"
   when:
     - rsyslog_client_log_dir is not defined
 
