Correct task tag
The 'Check if log dir exists' task is tagged as 'rsyslog_client-install'
but registers a variable that is only used by an 'rsyslog_client-config'
tagged task.

Change-Id: I97c3b37a4cc26f0f074f37f992d4764ab75abfdc
(cherry picked from commit 0ee4ebced14e6f8058e4651d80ebac27b9c989fd)

--- a/tasks/rsyslog_client_post_install.yml
+++ b/tasks/rsyslog_client_post_install.yml
@@ -32,7 +32,7 @@
     - "{{ rsyslog_client_log_dir is defined }}"
   register: log_dir
   tags:
-    - rsyslog_client-install
+    - rsyslog_client-config
 
 - name: Find all log files
   find:
