--- a/tasks/rsyslog_client_install.yml
+++ b/tasks/rsyslog_client_install.yml
@@ -20,7 +20,7 @@
     update_cache: "{{ (ansible_pkg_mgr == 'apt') | ternary('yes', omit) }}"
     cache_valid_time: "{{ (ansible_pkg_mgr == 'apt') | ternary(cache_timeout, omit) }}"
   register: install_packages
-  until: install_packages|success
+  until: install_packages is success
   retries: 5
   delay: 2
   with_items: "{{ rsyslog_client_distro_packages }}"
