use include_tasks instead of include
Change-Id: Ibd99d704b9965b513cd2efa019a01b5fb4fa4dd1
(cherry picked from commit d281666763800e7c98fa99b9ce26aefa8780d1dc)

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -25,12 +25,12 @@
   tags:
     - always
 
-- include: rsyslog_client_pre_install.yml
+- include_tasks: rsyslog_client_pre_install.yml
   tags:
     - rsyslog_client-install
 
-- include: rsyslog_client_install.yml
+- include_tasks: rsyslog_client_install.yml
   tags:
     - rsyslog_client-install
 
-- include: rsyslog_client_post_install.yml
+- include_tasks: rsyslog_client_post_install.yml
