--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ summary = rsyslog_client role
 description-file =
     README.rst
 author = OpenStack
-author-email = openstack-dev@lists.openstack.org
+author-email = openstack-discuss@lists.openstack.org
 home-page = https://docs.openstack.org/openstack-ansible-rsyslog_client/latest/
 classifier =
     Intended Audience :: Developers
