Templatize rsyslog configuration files
This patch differentiates rsyslogd configurations based on operating system
by defining respective system logfile location and user/group.

Change-Id: If5134278f7aa5e726325be38bb0bf8a560b668e5
Closes-Bug: #1807268

--- a/tasks/rsyslog_client_post_install.yml
+++ b/tasks/rsyslog_client_post_install.yml
@@ -14,7 +14,7 @@
 # limitations under the License.
 
 - name: Rsyslog Setup
-  copy:
+  template:
     src: "50-default.conf"
     dest: "/etc/rsyslog.d/50-default.conf"
     owner: "root"
