--- a/templates/50-default.conf
+++ b/templates/50-default.conf
@@ -1,5 +1,5 @@
 auth,authpriv.*  /var/log/auth.log
-*.*;local7,auth,authpriv,cron,daemon,mail,news.none  -/var/log/syslog
+*.*;local7,auth,authpriv,cron,daemon,mail,news.none  -{{ rsyslog_system_logfile }}
 cron.*  /var/log/cron.log
 daemon.*  -/var/log/daemon.log
 kern.*  -/var/log/kern.log
