Add integrated coverage
Currently this role doesn't test the integrated jobs.
With the dynamic execution of the roles, this role
also get tested by the integrated repo.

Change-Id: Ia1f64a995df7876a397d6bd364ceeedd9d1778dd

--- a/zuul.d/project.yaml
+++ b/zuul.d/project.yaml
@@ -16,6 +16,8 @@
 - project:
     templates:
       - openstack-ansible-role-jobs
+      - openstack-ansible-deploy-aio_metal-jobs
+      - openstack-ansible-deploy-aio_distro_metal-jobs
       - check-requirements
       - publish-openstack-docs-pti
       - release-notes-jobs-python3
