Do not use 'skipped' test as a filter
Change-Id: I9e21a2995b36b9b7dd4d8f22bb3436621b0c0201

--- a/tasks/rsyslog_client_post_install.yml
+++ b/tasks/rsyslog_client_post_install.yml
@@ -44,7 +44,7 @@
   register: log_files
   changed_when: false
   when:
-    - not log_dir | skipped
+    - not (log_dir is skipped)
   tags:
     - rsyslog_client-config
 
