--- a/tox.ini
+++ b/tox.ini
@@ -21,7 +21,7 @@ passenv =
     TESTING_BRANCH
     TESTING_HOME
     USER
-whitelist_externals =
+allowlist_externals =
     bash
 setenv =
     PYTHONUNBUFFERED=1
@@ -31,13 +31,19 @@ setenv =
     WORKING_DIR={toxinidir}
 
 [testenv:docs]
-deps =
-  -c{env:TOX_CONSTRAINTS_FILE:https://releases.openstack.org/constraints/upper/master}
-  -r{toxinidir}/doc/requirements.txt
-commands=
+deps = -r{toxinidir}/doc/requirements.txt
+commands =
     bash -c "rm -rf doc/build"
     doc8 doc
     sphinx-build -W --keep-going -b html doc/source doc/build/html
+
+[testenv:pdf-docs]
+deps = {[testenv:docs]deps}
+allowlist_externals =
+  make
+commands =
+  sphinx-build -W -b latex doc/source doc/build/pdf
+  make -C doc/build/pdf
 
 [doc8]
 # Settings for doc8:
