Add handled logs to the list
Debian 10 has a bit more handled files now, so we should create
a separate vars file to extend rsyslog_client_already_handled_files list

Change-Id: I3a2ce4aff374ec50fdc7b7d0373cac68b2706d43

--- a/vars/redhat-7.yml
+++ b/vars/redhat-7.yml
@@ -19,7 +19,8 @@ rsyslog_client_distro_packages:
 
 rsyslog_client_reload: 'systemctl restart rsyslog 2>&1 || true'
 
-rsyslog_client_already_handled_files: []
+rsyslog_client_already_handled_files:
+  - /var/log/yum.log
 
 rsyslog_system_logfile: /var/log/messages
 
